--- a/osuSongPackager/MainWindow.xaml
+++ b/osuSongPackager/MainWindow.xaml
@@ -5,8 +5,36 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:osuSongPackager"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" MinHeight="450" MinWidth="800"
+        Background="#FFF0F0F0">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="200"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="250" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <Menu Grid.Row="0" Width="Auto" Height="20">
+            <MenuItem Header="_File">
+                <MenuItem x:Name="Open" Header="Open" HorizontalAlignment="Left" Width="140" Click="Open_Click"/>
+                <MenuItem x:Name="Exit" Header="Exit" HorizontalAlignment="Left" Width="140" Click="Exit_Click"/>
+            </MenuItem>
+            <MenuItem Header="_Help">
+                <MenuItem x:Name="About" Header="About" HorizontalAlignment="Left" Width="140"/>
+            </MenuItem>
+        </Menu>
+        <TreeView x:Name="treeView" HorizontalAlignment="Stretch" Margin="10" Grid.Row="1" VerticalAlignment="Stretch"/>
+        <GroupBox x:Name="gBox" Header="Options" HorizontalAlignment="Left" Height="180" Margin="10" Grid.Row="2" VerticalAlignment="Top" Width="231"/>
+        <ListView Grid.Column="1" HorizontalAlignment="Stretch" Margin="10,10,10,10" Grid.Row="1" VerticalAlignment="Stretch" Grid.RowSpan="2">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn/>
+                </GridView>
+            </ListView.View>
+        </ListView>
     </Grid>
 </Window>
