--- a/osuSongPackager/MainWindow.xaml
+++ b/osuSongPackager/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:osuSongPackager"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" MinHeight="450" MinWidth="800"
+        Title="osu! Song Packager" Height="450" Width="800" MinHeight="450" MinWidth="800"
         Background="#FFF0F0F0">
     <Grid>
         <Grid.RowDefinitions>
@@ -29,10 +29,13 @@
         </Menu>
         <TreeView x:Name="treeView" HorizontalAlignment="Stretch" Margin="10" Grid.Row="1" VerticalAlignment="Stretch"/>
         <GroupBox x:Name="gBox" Header="Options" HorizontalAlignment="Left" Height="180" Margin="10" Grid.Row="2" VerticalAlignment="Top" Width="231"/>
-        <ListView Grid.Column="1" HorizontalAlignment="Stretch" Margin="10,10,10,10" Grid.Row="1" VerticalAlignment="Stretch" Grid.RowSpan="2">
+        <ListView x:Name="lView" Grid.Column="1" HorizontalAlignment="Stretch" Margin="10,10,10,10" Grid.Row="1" VerticalAlignment="Stretch" Grid.RowSpan="2">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn/>
+                    <GridViewColumn Header="Title" Width="190" DisplayMemberBinding="{Binding Title}" />
+                    <GridViewColumn Header="Artist" Width="170" DisplayMemberBinding="{Binding Artist}" />
+                    <GridViewColumn Header="Time" Width="50" DisplayMemberBinding="{Binding Time}" />
+                    <GridViewColumn Header="Downloaded" Width="100" DisplayMemberBinding="{Binding Downloaded}" />
                 </GridView>
             </ListView.View>
         </ListView>
